# openvoronoi

src/test/cpptest_minimal/: CMakeLists.txt  minimal.cpp
src/test/cpptest_para_lines/: CMakeLists.txt  para_lines.cpp
